# basically

./: Cargo.toml  README.md
.reuse/: dep5
ide/: Cargo.toml  DESIGN.md
ide/src/: main.rs  renderer.rs  screen.rs
interpreter/: Cargo.toml
interpreter/src/: ir.rs  main.rs  parser.rs  vm.rs
interpreter/src/ir/: value.rs
interpreter/src/parser/: grammar.pest
interpreter/tests/: spec.rs
interpreter/tests/test-resources/: basic_arithmetic.bas  basic_array.txt  basic_do_loop.bas  basic_do_loop.txt  basic_goto_labels.bas  basic_goto_line_numbers.txt  basic_if.txt  basic_input.bas  basic_input.txt  basic_logic.bas  basic_select_case.bas  basic_select_case.txt  basic_string.txt  basic_variables.bas  basic_variables.txt  basic_while.txt  basic_while_complex.txt  select_case_ranges.bas  select_case_ranges.txt  select_case_relational.bas  select_case_relational.txt  typed_variables.bas  typed_variables.txt
src/: ast.rs  ir.rs  lib.rs  main.rs  parser.rs  vm.rs
src/ir/: compiler.rs  instructions.rs  value.rs
src/parser/: grammar.pest
src/vm/: arrays.rs
tests/: spec.rs
tests/test-resources/: basic_arithmetic.txt  basic_array.bas  basic_comments.bas  basic_exit_do.bas  basic_exit_do.txt  basic_exit_do_simple.bas  basic_exit_for.bas  basic_exit_for.txt  basic_for.bas  basic_for.txt  basic_goto_labels.txt  basic_goto_line_numbers.bas  basic_goto_mixed.bas  basic_goto_mixed.txt  basic_if.bas  basic_if.txt  basic_if_simple.bas  basic_if_simple.txt  basic_input.in  basic_logic.txt  basic_string.bas  basic_while.bas  basic_while_complex.bas  basic_while_nested.bas  (+5 more)
(+6 files in other folders)
