[package]
name = "basically-interpreter"
version = "0.1.0"
edition = "2024"
authors = [
    "Daniel Vrátil <me@dvratil.cz>"
]

[dependencies]
enum-map = "2.7.3"
itertools = "0.14.0"
pest = { version = "2.8", features = [ "pretty-print"] }
pest_derive = "2.8"
thiserror = "2.0"

[dev-dependencies]
yare = "3.0"
assert2 = "0.3"
